@@ -1,3 +1,4 @@
+Moved the red door in front of the hose
 Removed decimals from flow rate and fluid density sliders
 Water tower: Extended the handle to make it more visible
 Water tower: Fixed: Arrows on the hose nozzle change length as a function of angle
